--- a/homepage/static/ngTemplates/app.homepage.bpo.html
+++ b/homepage/static/ngTemplates/app.homepage.bpo.html
@@ -129,6 +129,6 @@
     <span>we're always here to help you on your RPA journey, in any way we can.</span>
   </div>
   <div class="text-center" style="padding:20px;">
-    <button type="button" class="btn btn-primary" style="width:200px;border:2px solid #4a90e2;padding:10px;font-size:16px;font-weight:bold">Contact Sales</button>
+    <button type="button" class="btn btn-primary" style="width:200px;border:2px solid #4a90e2;padding:10px;font-size:16px;font-weight:bold"ng-click="schedule()">Contact Sales</button>
   </div>
 </div>
