--- a/homepage/static/ngTemplates/app.homepage.impliment.html
+++ b/homepage/static/ngTemplates/app.homepage.impliment.html
@@ -2,7 +2,7 @@
   <div class="col-md-7 col-md-offset-2" style="padding:70px 20px;text-align: left">
     <h1 style="font-size:55px;">Epsilon AI </h1>
     <h4 style="font-size:22px">Artificial intelligence productivity for virtually every developer and scenario</h4>
-    <a type="button" class="btn neonbtn">Try Epsilon AI free</a>
+    <a type="button" class="btn neonbtn"ng-click="schedule()">Try Epsilon AI free</a>
   </div>
 </div>
 <div class="row" style="margin:0px;padding:15px 0px">
@@ -155,7 +155,7 @@
 <div class="col-md-4 col-xs-12 explore_text">
   <h4>New to AI?</h4>
   <h5>Explore popular pre-built services for free</h5>
-  <a type="button" class="btn neonbtn">Try Cognitive Services</a>
+  <a type="button" class="btn neonbtn"ng-click="schedule()">Try Cognitive Services</a>
 </div>
 <div class="col-md-8"style="text-align:left;color:#50e6ff;padding:30px 0px">
   <div class="col-md-3 col-md-offset-1 text-center">
