--- a/homepage/static/ngTemplates/app.homepage.industry.html
+++ b/homepage/static/ngTemplates/app.homepage.industry.html
@@ -5,7 +5,7 @@
       achieve"</h4>
     <span> <strong>Jim Allen, Deloitte Consulting LLP</strong> </span>
     <div class="" style="margin-top:20px;">
-      <button type="button" class="btn bigbtn" style="background-color: Transparent;color:#fff;border: solid 1px #fff;">Find Out more</button>
+      <button type="button" class="btn bigbtn" style="background-color: Transparent;color:#fff;border: solid 1px #fff;"ng-click="schedule()">Find Out more</button>
     </div>
   </div>
 </div>
@@ -18,7 +18,7 @@
       <a href="/bpo" class="col-md-3 col-xs-11 col-sm-3 col-xs-offset-1 text-center list">
         BPO
       </a>
-      <a href="" class="col-md-3 col-xs-11 col-sm-3 text-center list">
+      <a href="/finance" class="col-md-3 col-xs-11 col-sm-3 text-center list">
         Finance & Banking
       </a>
       <a href="" class="col-md-3 col-xs-11 col-sm-3 text-center list">
