--- a/homepage/static/ngTemplates/app.homepage.remote.html
+++ b/homepage/static/ngTemplates/app.homepage.remote.html
@@ -6,7 +6,7 @@
   <div class="col-md-3 col-md-offset-1" style="padding-bottom:30px;">
     <div class="" style="position: relative; width: 100%;">
       <img src="/static/images/rem_img.png" alt="" width="100%" height="auto;">
-      <a type="button" class="btn hero-button">Request Demo</a>
+      <a type="button" class="btn hero-button"ng-click="schedule()">Request Demo</a>
     </div>
   </div>
 </div>
@@ -62,7 +62,7 @@
       <h3>Support without boundaries.</h3>
       <p>No matter the device, solve every problem seamlessly and securely with remote support software for PC, Mac, iOS, Android and more. EpsilonAI lets you connect in seconds, helping to increase client satisfaction and decrease support costs.</p>
       <div class="">
-        <a href="" type="button" class="btn btn-primary bigbtn"style="background-color:#013157;">Support Everyone</a>
+        <a href="" type="button" class="btn btn-primary bigbtn"style="background-color:#013157;"ng-click="schedule()">Support Everyone</a>
       </div>
     </div>
   </div>
