--- a/homepage/static/ngTemplates/app.homepage.training.html
+++ b/homepage/static/ngTemplates/app.homepage.training.html
@@ -1,9 +1,9 @@
 <div class="row" style="margin:0px;">
-  <div class="col-md-7 text-center" style="background-color:rgba(5, 20, 43, 0.85);min-height:500px;color:#fff;">
-    <div class="col-md-7 col-md-offset-2" style="padding:90px 0px 20px 0px;text-align: left">
-      <h1 style="font-size:55px;">The destination for workplace learning</h1>
-      <h4 style="font-size:22px">Learn and improve skills across business, tech, design, and more. Taught by experts to help your workforce do whatever comes next.</h4>
-      <a type="button" class="btn btn-default redbtn">Get started</a>
+  <div class="col-md-7 text-center bgrnd_main">
+    <div class="col-md-7 col-md-offset-2" style="padding:90px 0px 20px 0px;text-align: left;font-weight: lighter;font-family: cursive;">
+      <span style="font-size:45px;">The destination for workplace learning</span><br>
+      <span style="font-size:22px;line-height:1.5;">Learn and improve skills across business, tech, design, and more. Taught by experts to help your workforce do whatever comes next.</span><br><br>
+      <a type="button" class="btn btn-default redbtn"ng-click="schedule()">Get started</a>
     </div>
   </div>
   <div class="col-md-5 bgrnd"></div>
@@ -109,6 +109,6 @@
 <div class="row" style="margin:0px;background-image:url('/static/images/constellation-bg.png');background-repeat: no-repeat;background-size: cover;min-height: 200px;background-position: center;background-color:#080738">
   <div class="col-md-12 text-center" style="color:#fff;padding:20px">
     <h2>Experience a better learning platform</h2><br>
-    <a type="button" class="btn btn-default redbtn">Get a free demo</a>
+    <a type="button" class="btn btn-default redbtn"ng-click="schedule()">Get a free demo</a>
   </div>
 </div>
