basic changes better mob ui

--- a/homepage/static/ngTemplates/app.homepage.training.html
+++ b/homepage/static/ngTemplates/app.homepage.training.html
@@ -1,6 +1,6 @@
 <div class="row" style="margin:0px;">
   <div class="col-md-7 text-center bgrnd_main">
-    <div class="col-md-7 col-md-offset-2" style="padding:90px 0px 20px 0px;text-align: left;font-weight: lighter;font-family: cursive;">
+    <div class="col-md-7 col-md-offset-2" style="padding:90px 0px 20px 0px;text-align: left;font-weight: lighter;font-family: sans-serif;">
       <span style="font-size:45px;">The destination for workplace learning</span><br>
       <span style="font-size:22px;line-height:1.5;">Learn and improve skills across business, tech, design, and more. Taught by experts to help your workforce do whatever comes next.</span><br><br>
       <a type="button" class="btn btn-default redbtn"ng-click="schedule()">Get started</a>
