--- a/homepage/static/ngTemplates/app.homepage.bpo.html
+++ b/homepage/static/ngTemplates/app.homepage.bpo.html
@@ -84,19 +84,19 @@
   </div>
   <div class="col-md-8 col-md-offset-2 text-center">
     <div class="col-md-4 col-sm-12" style="padding:50px;">
-      <div style="padding:30px;">
+      <div class="ai_img_div">
         <img src="/static/images/one-click.jpg" alt="" width="170px" height="170px">
       </div>
       <h4 style="font-weight:bold;">One Click AI Assisted Creation</h4>
     </div>
     <div class="col-md-4 col-sm-12" style="padding:50px;">
-      <div style="padding:30px;">
+      <div class="ai_img_div">
         <img src="/static/images/designs.jpg" alt="" width="170px" height="170px">
       </div>
       <h4 style="font-weight:bold;">Choose From Thousands of Designs</h4>
     </div>
     <div class="col-md-4 col-sm-12" style="padding:50px;">
-      <div style="padding:30px;">
+      <div class="ai_img_div">
         <img src="/static/images/machine.jpg" alt="" width="170px" height="170px">
       </div>
       <h4 style="font-weight:bold;">Machine Generated Content</h4>
@@ -104,19 +104,19 @@
   </div>
   <div class="col-md-8 col-md-offset-2 text-center">
     <div class="col-md-4 col-sm-12" style="padding:50px;">
-      <div style="padding:30px;">
+      <div class="ai_img_div">
         <img src="/static/images/machine-code.jpg" alt="" width="170px" height="170px">
       </div>
       <h4 style="font-weight:bold;">Error Free Machine Generated code</h4>
     </div>
     <div class="col-md-4 col-sm-12" style="padding:50px;">
-      <div style="padding:30px;">
+      <div class="ai_img_div">
         <img src="/static/images/edit.jpg" alt="" width="170px" height="170px">
       </div>
       <h4 style="font-weight:bold;">Easy Click To Edit</h4>
     </div>
     <div class="col-md-4 col-sm-12" style="padding:50px;">
-      <div style="padding:30px;">
+      <div class="ai_img_div">
         <img src="/static/images/responsive.jpg" alt="" width="170px" height="170px">
       </div>
       <h4 style="font-weight:bold;">Works Across The Device - Responsive</h4>
