--- a/homepage/static/ngTemplates/app.homepage.finance.html
+++ b/homepage/static/ngTemplates/app.homepage.finance.html
@@ -21,12 +21,12 @@
 </div>
 <div class="chart">
   <div class="chart_graphic">
-    <svg xmlns="http://www.w3.org/2000/svg" width="1900" height="1370" viewBox="0 0 1900 1370" class="chart_svg">
-      <g fill="none" fill-rule="evenodd">
-        <path class="animate-chart__under" fill="#000" fill-opacity=".06" d="M1760 550l-114 130-177 110-72-160-62 140-153-40-89-40-106 100-165 60-39-100-134 310-78-130-77 157.949V1090l-.752-.51-.248.51v-.678L317 970 0 1370v-20l317-400 176.248 119.49L571 910l78 130 134-310 39 100 165-60 106-100 89 40 153 40 62-140 72 160 177-110 114-130 140 250v20l-140-250z"></path>
-        <path class="animate-chart__over" fill="#FF555F" d="M1760 250l-114 150-177-90-72 210-62-100-153 200-89-110-106 170-165 120-39-100-134 310-78-130-77 157.949V1040l-.752-.51-.248.51v-.678L317 920 0 1320v-20l317-400 176.248 119.49L571 860l78 130 134-310 39 100 165-120 106-170 89 110 153-200 62 100 72-210 177 90 114-150L1900 0v20l-140 230z"></path>
-      </g>
-    </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" width="1900" height="1370" viewBox="0 0 1900 1370" class="chart_svg">
+        <g fill="none" fill-rule="evenodd">
+          <path class="animate-chart__under" fill="#000" fill-opacity=".06" d="M1760 550l-114 130-177 110-72-160-62 140-153-40-89-40-106 100-165 60-39-100-134 310-78-130-77 157.949V1090l-.752-.51-.248.51v-.678L317 970 0 1370v-20l317-400 176.248 119.49L571 910l78 130 134-310 39 100 165-60 106-100 89 40 153 40 62-140 72 160 177-110 114-130 140 250v20l-140-250z"></path>
+          <path class="animate-chart__over" fill="#FF555F" d="M1760 250l-114 150-177-90-72 210-62-100-153 200-89-110-106 170-165 120-39-100-134 310-78-130-77 157.949V1040l-.752-.51-.248.51v-.678L317 920 0 1320v-20l317-400 176.248 119.49L571 860l78 130 134-310 39 100 165-120 106-170 89 110 153-200 62 100 72-210 177 90 114-150L1900 0v20l-140 230z"></path>
+        </g>
+      </svg>
   </div>
   <div class="chart_text" style="padding: 0;">
     <div class="col-md-6 col-md-offset-2" style="padding:0px 10px 10px 10px;">
@@ -75,6 +75,29 @@
         <div class="stat_number"><sup>+</sup><span class="counter-up" data-number="125">125</span><sup></sup></div>
         <h2 class="stat_description">leasing technology experts</h2>
       </div>
+    </div>
+  </div>
+</div>
+<div class="row" style="margin:0px;">
+  <div class="col-md-8 col-md-offset-2 Jumbo_title">
+    <span class="">we have products and solutions that fit your needs</span>
+  </div>
+  <div class="col-md-12" style="background-color:#8C5D8E;height: 33.33vh;">
+    <div class="col-md-8 col-md-offset-2 jumbo_div">
+      <span class="jumbo_text">I need a full-service, highly scalable operating model for my lending and leasing business.</span><br>
+      <span class="tiny_text">2 Products & Solutions</span>
+    </div>
+  </div>
+  <div class="col-md-12" style="background-color:#583A53;height: 33.33vh;">
+    <div class="col-md-8 col-md-offset-2 jumbo_div">
+      <span class="jumbo_text">I need to address the unique needs of my lending and leasing business.</span><br>
+      <span class="tiny_text">4 Products & Solutions</span>
+    </div>
+  </div>
+  <div class="col-md-12" style="background-color:#332230;height: 33.33vh;">
+    <div class="col-md-8 col-md-offset-2 jumbo_div">
+      <span class="jumbo_text">Our AI-driven solutions and products</span><br>
+      <span class="tiny_text">4 Products & Solutions</span>
     </div>
   </div>
 </div>
