--- a/homepage/static/ngTemplates/app.homepage.contactSale.modal.html
+++ b/homepage/static/ngTemplates/app.homepage.contactSale.modal.html
@@ -34,8 +34,8 @@
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <label for="">Phone Number</label>
-              <input type="text" class="form-control" id="" placeholder="Work Phone Number" ng-model="form.mobileNumber">
+              <label for="">Phone Number <span>*</span></label>
+              <input type="text" class="form-control" id="" placeholder="Work Phone Number" required ng-model="form.mobileNumber">
             </div>
           </div>
         </div>
@@ -49,7 +49,7 @@
           <div class="col-md-6">
             <div class="form-group">
               <label for="">Company <span>*</span> </label>
-              <input type="text" class="form-control" ng-model="form.comapany" id="" placeholder="Your Company" required>
+              <input type="text" class="form-control" ng-model="form.company" id="" placeholder="Your Company" required>
             </div>
           </div>
         </div>
