--- a/static_shared/ngTemplates/header.html
+++ b/static_shared/ngTemplates/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top animated slideInDown" id="navbarTop" style="{{sideMenuVisibility ? 'margin-left:13%': 'margin-left:5%;'}};{{mobileView ? 'margin-left:31%':''}}" >
+<nav class="navbar navbar-default navbar-fixed-top animated slideInDown" id="navbarTop" style="{{sideMenuVisibility ? 'margin-left:13%': 'margin-left:4%;'}};{{mobileView ? 'margin-left:31%':''}}" >
   <div class="container-fluid" style="height:100%;">
     <div class="navbar-header"  style="height: 100%;">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navBar" aria-expanded="false" aria-controls="navbar">
@@ -21,7 +21,7 @@
       <div class="navbar-brand" style="margin-right:30px;color:white"></div>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="navBar" style="height:5vh;">
+    <div class="collapse navbar-collapse" id="navBar" style="height:50px;">
 
   		<!-- <ul class="nav navbar-nav" style="height:5vh;">
   			<li style="height:100%;" ng-class="{active: $state.includes(m.name)}" ng-repeat="m in modules"><a style="padding-top:1.5vh;" ui-sref="{{m.name}}" ><i class="fa {{m.icon}}"></i> {{m.name | humanize}}</a></li>
