--- a/static_shared/ngTemplates/sideMenu.html
+++ b/static_shared/ngTemplates/sideMenu.html
@@ -4,7 +4,7 @@
     <div class="container-fluid" style="background-image: url('https://png.pngtree.com/thumb_back/fw800/back_pic/03/95/04/5757eb8d28d1012.jpg');background-size: cover;padding:20px;padding-bottom:30px;padding-left:40px;">
       <div class="row" style="display:flex;flex-direction:column;justify-content:center;align-items:center">
         <img ng-src="{{user.pk | getDP}}" class="img img-circle pull-left" style="width:100px;"><br>
-        <h3 style="color:grey">{{user.pk | getName}}</h3>
+        <h3 style="color:var(--themeMain)">{{user.pk | getName}}</h3>
       </div>
     </div>
   </div>
