--- a/ecommerce/static/ngTemplates/app.ecommerce.vendor.orders.explore.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.vendor.orders.explore.html
@@ -61,6 +61,9 @@
       <div class="row" style="margin:20px 5px">
         <div class="" ng-repeat="pData in order.orderQtyMap" style="margin-bottom:10px">
           <div class="container-fluid card" style="padding:20px; border-left:4px solid #0c9a9e;position:relative;">
+
+            <input type="checkbox" >
+
             <div class="fa fa-trash-o pull-right fa-2x" style="cursor:pointer;color:red" mwl-confirm title="Cancel Item" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="orderItemCancel($index)" confirm-button-type="default"
               cancel-button-type="default" ng-if="order.status!='failed' && pData.status=='created' || pData.status=='packed'">
             </div>
@@ -77,7 +80,7 @@
             <div class="row">
               <h3 ng-if="pData.prodVar==undefined"> {{pData.productName}} {{pData.product.product.howMuch | convertUnit:pData.product.product.unit}}</h3>
               <h3 ng-if="pData.prodVar"> {{pData.productName}}
-                <span ng-if="pData.product.product.unit!='Size and Color'&&pData.product.product.unit!='Size'"> {{pData.prodVar[0].unitPerpack * pData.product.product.howMuch | convertUnit: pData.product.product.unit}} </span>
+                <span ng-if="pData.product.product.unit!='Size and Color' && pData.product.product.unit!='Size'"> {{pData.prodVar[0].unitPerpack * pData.product.product.howMuch | convertUnit: pData.product.product.unit}} </span>
                 <span ng-if="pData.product.product.unit=='Size and Color'||pData.product.product.unit=='Size'"> {{pData.prodVar[0].unitPerpack | convertSize: pData.product.product.unit}} {{pData.desc}} </span>
                  </h3>
             </div>
