--- a/support/static/ngTemplates/app.projects.form.html
+++ b/support/static/ngTemplates/app.projects.form.html
@@ -6,8 +6,14 @@
     <h3>Edit  Project {{form.title}}  </h3>
   </div>
   <div class="col-md-6" style="padding-top:20px;">
+    <div class="form-group">
+      <label>Vendor</label>
+      <div class="">
+        <input uib-typeahead="vendor as vendor.name for vendor in vendorSearch($viewValue)" ng-model="form.vendor" type="text" class="form-control" placeholder="Search using name">
+      </div>
+    </div>
     <div class="form-group" ng-if="mode=='new' || mode=='edit'">
-      <label>Service</label>
+      <label>Customer</label>
       <div class="{{(showCreateCompanyBtn || companyExist) && !showCompanyForm ? 'input-group':''}}">
         <input uib-typeahead="company as company.name for company in companySearch($viewValue)" ng-model="form.service" type="text" class="form-control" placeholder="Search using name">
         <span ng-click="openCreateService()" ng-if="(showCreateCompanyBtn || companyExist) && !showCompanyForm" class="input-group-addon btn btn-primary"><i class="fa fa-{{!companyExist ? 'plus':'pencil'}}"></i> {{ !companyExist?  'New':'Update'}}</span>
