--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -51,7 +51,7 @@
     <!-- <button type="button" ng-click="takeSnapshot()" class="btn btn-default">
       snap
     </button> -->
-    <div ng-if="data.video" class="container-fluid" style="{{data.isVideoShowing&&isVisitorVideoShowing?'height:20vh':'height:2.8vh'}} ;transition:.5s; padding:0px;" ng-init="setHeight()">
+    <div ng-if="data.video&&!data.closeIframe" class="container-fluid" style="{{data.isVideoShowing&&isVisitorVideoShowing?'height:20vh':'height:2.8vh'}} ;transition:.5s; padding:0px;" ng-init="setHeight()">
       <!-- <span style="position:absolute; right:7px; top:3px; background-color:black; padding:3px;"><i class="fa fa-times-circle"></i></span> -->
       <!-- {{data.video}}
       {{data.videoUrl}} -->
@@ -62,7 +62,7 @@
       <!-- <iframe ng-src="{{data.currentUrl | trusted}}" scrolling="no" style="height:100%; transition:0.5s;width:100%; border:1px solid #e0e0e0;" allowFullScreen></iframe> -->
 
     </div>
-    <div ng-if="data.audio" class="container-fluid" style="height:5vh; padding:0px;" ng-init="setHeight()">
+    <div ng-if="data.audio&&!data.closeIframe" class="container-fluid" style="height:5vh; padding:0px;" ng-init="setHeight()">
       {{setHeight()}}
       <iframe id="iframeChat{{data.uid}}" ng-src="{{data.audioUrl | trusted}}" scrolling="no" style="height:100%; width:100%; border:1px solid #e0e0e0;"></iframe>
     </div>
