--- a/support/static/ngTemplates/app.support.html
+++ b/support/static/ngTemplates/app.support.html
@@ -38,8 +38,8 @@
                         <span ng-if="x.name" >{{x.name}}</span>
                         <span ng-if="!x.name" >{{x.uid}}</span>
                         <span ng-if="!x.boxOpen && x.unreadMsg>0" >( {{x.unreadMsg}} )</span>
-                        <span ng-if="x.video"><i class="fa fa-video-camera" aria-hidden="true"></i></span>
-                        <span ng-if="x.audio"><i class="fa fa-volume-up" aria-hidden="true"></i></span>
+                        <span ng-if="x.video&&!x.closeIframe"><i class="fa fa-video-camera" aria-hidden="true"></i></span>
+                        <span ng-if="x.audio&&!x.closeIframe"><i class="fa fa-volume-up" aria-hidden="true"></i></span>
                       </div>
                     </div>
                     <div class="col-md-2">
